--- a/src/styles/AccountSetting.scss
+++ b/src/styles/AccountSetting.scss
@@ -55,7 +55,7 @@
           .picture-box__edit-btn {
             position: absolute;
             bottom: 0;
-            left: 60%;
+            left: 50%;
             background-color: var(--Color-03, #222);
             border-radius: 50%;
             padding: 8px;
@@ -165,7 +165,6 @@
           align-items: center;
           width: 100%;
           margin: 16px 0 4px 0;
-          padding: 12px;
           height: 54px;
           align-self: stretch;
           border-radius: 12px;
@@ -179,9 +178,10 @@
             border: none;
           }
           .user-info__edit-btn {
-            width: 120px;
             display: flex;
-            height: 28px;
+            width: auto;
+            white-space: nowrap;
+            height: 30px;
             padding: 4px 10px;
             justify-content: center;
             align-items: center;
@@ -194,11 +194,7 @@
             font-style: normal;
             line-height: normal;
             letter-spacing: 0.42px;
-            display: flex;
-            padding: 4px 0px;
-            justify-content: center;
-            align-items: center;
-            gap: 8px;
+            margin-right: 12px;
           }
         }
         .user-info__error {
@@ -284,7 +280,6 @@
     }
     .social__item {
       width: 100%;
-      margin-bottom: 16px;
       .social__item-title {
         color: var(--Text-music-title, #f1f1f1);
         font-family: Orbitron500;
@@ -308,7 +303,6 @@
         align-items: center;
         width: 100%;
         margin: 16px 0 4px 0;
-        padding: 12px;
         height: 54px;
         align-self: stretch;
         border-radius: 12px;
@@ -337,11 +331,7 @@
           font-style: normal;
           line-height: normal;
           letter-spacing: 0.42px;
-          display: flex;
-          padding: 4px 0px;
-          justify-content: center;
-          align-items: center;
-          gap: 8px;
+          margin-right: 12px;
         }
       }
       .social__error {
