--- a/src/components/create/AlbumCoverStudio.scss
+++ b/src/components/create/AlbumCoverStudio.scss
@@ -10,6 +10,7 @@
         border-radius: 12px;
         display: flex;
         flex-direction: column;
+        height: 462px;
         progress {
             width: 100%;
             max-width: 270px;
@@ -132,5 +133,13 @@
         text-align: center;
         font-family: Inter400;
         font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .create__album-cover-studio {
+        .creating {
+            flex-direction: column;
+        }
     }
 }
