--- a/src/components/create/GetStarted.scss
+++ b/src/components/create/GetStarted.scss
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    border-radius: 12px;
     .create__get-started--title {
         color: #cf0;
         font-family: orbitron700;
