--- a/src/components/mypage/Albums.scss
+++ b/src/components/mypage/Albums.scss
@@ -7,6 +7,16 @@
     line-height: 100%; /* 24px */
     letter-spacing: 0.72px;
     margin-bottom: 24px;
+    position: relative;
+    &::after {
+      position: absolute;
+      content: "";
+      width: 5px;
+      height: 5px;
+      top: 0;
+      background-color: #cf0;
+      border-radius: 100%;
+    }
   }
   .albums__list {
     display: flex;
@@ -105,9 +115,6 @@
       justify-content: space-between;
       margin-bottom: 20px;
       .my-albums__title {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
         gap: 16px;
         flex: 1 0 0;
         color: var(--primary-base, #cf0);
@@ -116,6 +123,16 @@
         font-style: normal;
         line-height: normal;
         letter-spacing: 0.72px;
+        position: relative;
+        &::after {
+          position: absolute;
+          content: "";
+          width: 5px;
+          height: 5px;
+          top: 0;
+          background-color: #cf0;
+          border-radius: 100%;
+        }
       }
       .my-albums__more-btn {
         width: 160px;
