--- a/src/components/mypage/MyFavorites.scss
+++ b/src/components/mypage/MyFavorites.scss
@@ -20,6 +20,16 @@
       font-style: normal;
       line-height: normal;
       letter-spacing: 0.72px;
+      position: relative;
+      &::after {
+        position: absolute;
+        content: "";
+        width: 5px;
+        height: 5px;
+        top: 0;
+        background-color: #cf0;
+        border-radius: 100%;
+      }
     }
   }
   .my-favorites__search {
