--- a/src/components/mypage/Reward.scss
+++ b/src/components/mypage/Reward.scss
@@ -23,6 +23,16 @@
         font-style: normal;
         line-height: normal;
         letter-spacing: 0.72px;
+        position: relative;
+        &::after {
+          position: absolute;
+          content: "";
+          width: 5px;
+          height: 5px;
+          top: 0;
+          background-color: #cf0;
+          border-radius: 100%;
+        }
       }
     }
     .section__table {
@@ -32,6 +42,12 @@
       border-collapse: collapse;
       thead {
         border-bottom: 1px solid var(--stroke-stroke, #232323);
+        border-radius: 12px 12px 0px 0px;
+        background: linear-gradient(
+          0deg,
+          rgba(199, 240, 100, 0.2) 0%,
+          rgba(114, 138, 58, 0) 20%
+        );
         tr {
           height: 70px;
           padding: 12px 16px;
@@ -61,21 +77,26 @@
             font-size: 14px;
             font-style: normal;
             line-height: normal;
-            .table-button {
-              color: var(--Text-music-sub, #aaa);
-              font-family: Inter500;
-              font-size: 12px;
-              font-style: normal;
-              line-height: 100%; /* 12px */
-              letter-spacing: 0.36px;
+            .td-content {
               display: flex;
-              width: 100px;
-              padding: 8px 12px;
               justify-content: center;
               align-items: center;
-              gap: 8px;
-              border-radius: 12px;
-              background: var(--Color-03, #222);
+              .table-button {
+                color: var(--Text-music-sub, #aaa);
+                font-family: Inter500;
+                font-size: 12px;
+                font-style: normal;
+                line-height: 100%; /* 12px */
+                letter-spacing: 0.36px;
+                display: flex;
+                width: 100px;
+                padding: 8px 12px;
+                justify-content: center;
+                align-items: center;
+                gap: 8px;
+                border-radius: 12px;
+                background: var(--Color-03, #222);
+              }
             }
           }
           .pending {
