--- a/src/components/unit/Filter.scss
+++ b/src/components/unit/Filter.scss
@@ -9,6 +9,7 @@
     align-items: center;
     border-radius: 10px 2px 10px 10px;
     border: 1px solid var(--primary-200, #a9d400);
+    position: relative;
     img {
       margin-right: 6px;
     }
@@ -18,6 +19,16 @@
       font-size: 14px;
       font-style: normal;
       line-height: 100%; /* 14px */
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      width: 4px;
+      height: 4px;
+      top: 2px;
+      right: 2px;
+      border-radius: 100%;
+      background-color: #cf0;
     }
   }
 }
