상훈 Feat : 앨범 테이블 특수문자 추가

--- a/src/components/unit/AlbumsTable.scss
+++ b/src/components/unit/AlbumsTable.scss
@@ -41,6 +41,9 @@
         font-size: 14px;
         font-style: normal;
         line-height: normal;
+        &:first-child {
+          width: 40px;
+        }
         .td-content {
           display: flex;
           justify-content: center;
