--- a/src/components/mypage/Reward.scss
+++ b/src/components/mypage/Reward.scss
@@ -36,10 +36,12 @@
       }
     }
     .section__table {
+      min-width: 768px;
       width: 100%;
       padding: 12px 16px;
       margin: 0 auto;
       border-collapse: collapse;
+      overflow: auto;
       thead {
         border-bottom: 1px solid var(--stroke-stroke, #232323);
         border-radius: 12px 12px 0px 0px;
