경세 버튼 작업 완료

--- a/src/components/create/ExpandedButton.scss
+++ b/src/components/create/ExpandedButton.scss
@@ -8,6 +8,7 @@
         }
     }
     .expanded-button {
+        font: inherit;
         position: absolute;
         border-radius: inherit;
         text-transform: capitalize;
