경세 버튼 다시 수정

--- a/src/components/create/GetStarted.scss
+++ b/src/components/create/GetStarted.scss
@@ -54,4 +54,12 @@
         background-color: #cf0;
         float: right;
     }
+
+    .버튼 {
+        background-color: #cf0;
+        border-radius: 12px;
+        padding: 8px 24px;
+        color: #000;
+        font-family: orbitron600;
+    }
 }
