--- a/src/components/create/ExpandedButton.scss
+++ b/src/components/create/ExpandedButton.scss
@@ -1,24 +1,23 @@
-.composition__expanded-button {
+.composition__expanded-buttons {
     position: relative;
-    border: 1px solid;
-    color: transparent;
-    &:active {
-        .expanded-button {
-            top: 0px;
-        }
+    z-index: 2;
+    box-sizing: border-box;
+    &:disabled {
+        color: #565656 !important;
+        background-color: #000 !important;
+        border: 1px solid #2c3a00 !important;
     }
-    .expanded-button {
-        font: inherit;
+
+    .composition__expanded-buttons-after {
+        box-sizing: border-box;
+        content: '';
         position: absolute;
-        border-radius: inherit;
-        text-transform: capitalize;
-        width: calc(100% + 2px);
+        width: 100%;
         height: 100%;
-        top: -3px;
-        left: 50%;
-        transform: translateX(-50%);
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        border-radius: inherit;
+        border-bottom: 2px solid;
+        top: 4px;
+        left: 0;
+        z-index: 1;
     }
 }
