--- a/src/styles/Create.scss
+++ b/src/styles/Create.scss
@@ -160,39 +160,39 @@
             }
         }
 
-        // button {
-        //     position: relative;
-        //     color: var(--Text-music-title, #f1f1f1);
-        //     font-family: Orbitron600;
-        //     font-size: 16px;
-        //     letter-spacing: 0.48px;
-        //     border-radius: 12px;
-        //     min-width: 140px;
-        //     height: 40px;
-        //     text-transform: capitalize;
-        //     z-index: 2;
+        button {
+            position: relative;
+            color: var(--Text-music-title, #f1f1f1);
+            font-family: Orbitron600;
+            font-size: 16px;
+            letter-spacing: 0.48px;
+            border-radius: 12px;
+            min-width: 140px;
+            height: 40px;
+            text-transform: capitalize;
+            z-index: 2;
 
-        //     &.next,
-        //     &.upload {
-        //         background-color: #cf0;
-        //         color: #1a1a1a;
-        //     }
-        //     &.skip {
-        //         background: #6458ff;
-        //     }
+            &.next,
+            &.upload {
+                background-color: #cf0;
+                color: #1a1a1a;
+            }
+            &.skip {
+                background: #6458ff;
+            }
 
-        //     &.back {
-        //         color: #f1f1f1;
-        //         background-color: #383838;
-        //     }
+            &.back {
+                color: #f1f1f1;
+                background-color: #383838;
+            }
 
-        //     &:disabled {
-        //         cursor: not-allowed;
-        //         border: 1px solid #2c3a00;
-        //         background-color: #000;
-        //         color: #565656;
-        //     }
-        // }
+            // &:disabled {
+            //     cursor: not-allowed;
+            //     border: 1px solid #2c3a00;
+            //     background-color: #000;
+            //     color: #565656;
+            // }
+        }
     }
 
     .check-list {
