상훈 Feat : 마이페이지 보더 설정

--- a/src/components/unit/AlbumsTable.scss
+++ b/src/components/unit/AlbumsTable.scss
@@ -24,6 +24,11 @@
         font-size: 14px;
         font-style: normal;
         line-height: normal;
+        white-space: nowrap;
+        padding-right: 16px;
+        &:last-child {
+          padding-right: 0;
+        }
       }
     }
   }
