--- a/src/styles/MyPage.scss
+++ b/src/styles/MyPage.scss
@@ -8,6 +8,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+    height: 600px;
     .mypage__profile-bg {
       width: 100%;
       background-color: #333;
@@ -16,8 +18,17 @@
         width: 100%;
       }
     }
+    .mypage__profile-overlay {
+      position: absolute;
+      width: 700px;
+      height: 310px;
+      top: 280px;
+      border-radius: 12px;
+      border: 1px solid var(--primary-base, #cf0);
+    }
     .mypage__profile-info {
-      margin-top: -120px;
+      position: absolute;
+      top: 280px;
       padding: 22px;
       display: flex;
       flex-direction: column;
@@ -169,9 +180,18 @@
   .mypage {
     .mypage__profile {
       width: 100%;
+      height: 580px;
+      .mypage__profile-overlay {
+        width: 100%;
+        top: 180px;
+        min-height: 390px;
+      }
       .mypage__profile-info {
         width: 100%;
+        top: 180px;
+        min-height: 380px;
         height: auto;
+
         .mypage__profile-edit-box {
           .mypage__profile-info-box {
             .mypage__username {
