상훈 Feat : ai 서비스 간격조절

--- a/src/components/mypage/AiServices.scss
+++ b/src/components/mypage/AiServices.scss
@@ -85,6 +85,7 @@
   .ai-status__info {
     display: flex;
     justify-content: space-between;
+    gap: 16px;
     .ai-status__chart {
       width: 50%;
       img {
