--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -429,7 +429,11 @@
 
   }//album-detail__rank-table--END--
 
-  
+  .advanced-input{
+    .advanced-form{
+      background-color: transparent;
+    }//.advanced-form--END--
+  }//advanced-input--END--
 
   
 }//album-detail--END--
